--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -23,7 +23,6 @@
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
-    "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-geolocation": "^1.1.0",
@@ -32,6 +31,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.59.2",
     "styled-components": "^5.3.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -59,10 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/gsap": "^3.0.0",
-    "@types/jquery": "^3.5.16",
-    "gsap": "^3.11.4"
   }
 }
