--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@react-three/drei": "^9.57.3",
+    "@react-three/fiber": "^8.12.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -33,6 +35,7 @@
     "redux": "^4.2.1",
     "sass": "^1.59.2",
     "styled-components": "^5.3.8",
+    "three": "^0.150.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
