--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -28,12 +28,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-geolocation": "^1.1.0",
+    "react-icons": "^4.8.0",
     "react-kakao-maps-sdk": "^1.1.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
-    "sass": "^1.59.2",
     "styled-components": "^5.3.8",
     "three": "^0.150.1",
     "typescript": "^4.9.5",
