--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -11,6 +11,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	//Query dsl 을 프로젝트로 설정할 때 gradle이 5.0 이상일 때 추가 작업
 	id "com.ewerk.gradle.plugins.querydsl" version "${querydslPluginVer}"
+	id 'jacoco'
 
 }
 
@@ -53,7 +54,13 @@ dependencies {
 	implementation "com.querydsl:querydsl-jpa:${querydslVer}"
 	implementation "com.querydsl:querydsl-apt:${querydslVer}"
 
+	// test
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+
+	testRuntimeOnly 'com.h2database:h2'
 }
+
 
 // querydsl 사용할 경로 지정합니다. 현재 지정한 부분은 .gitignore에 포함되므로 git에 올라가지 않습니다.
 def querydslDir = "$buildDir/generated/'querydsl'"
@@ -82,7 +89,74 @@ configurations {
 	}
 	querydsl.extendsFrom compileClasspath
 }
+//
+//tasks.named('test') {
+//
+//}
 
-tasks.named('test') {
+test{
 	useJUnitPlatform()
+	finalizedBy 'jacocoTestReport' // test 작업이 끝나고 jacocoTestReport를 실행
 }
+
+jacoco {
+	toolVersion = "0.8.7"
+}
+
+
+jacocoTestReport {
+	reports {
+		xml.required = false
+		csv.required = false
+		html.required = true
+	}
+
+	def Qdomains = []
+	for(qPattern in "**/QA" .. "**/QZ"){
+		Qdomains.add(qPattern+"*")
+	}
+
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it,
+					exclude: [] + Qdomains)
+		}))
+	}
+
+	finalizedBy 'jacocoTestCoverageVerification'
+}
+
+jacocoTestCoverageVerification {
+
+	def Qdomains = []
+	// 패키지 + 클래스명
+	for (qPattern in '*.QA'..'*.QZ') { // qPattern = '*.QA', '*.QB', ... '*.QZ'
+		Qdomains.add(qPattern + '*')
+	}
+
+	violationRules {
+		rule {
+			enabled = true // 활성화
+			element = 'CLASS' // 클래스 단위로 커버리지 체크
+			// includes = []
+
+			// 라인 커버리지 제한을 80%로 설정
+			limit {
+				counter = 'LINE'
+				value = 'COVEREDRATIO'
+				minimum = 0.00
+			}
+
+			// 빈 줄을 제외한 코드의 라인수를 최대 200라인으로 제한합니다.
+			limit {
+				counter = 'LINE'
+				value = 'TOTALCOUNT'
+				maximum = 200
+			}
+
+			excludes = [] + Qdomains // 제외할 Qdomains 패턴 추가
+		}
+
+	}
+}
+
