--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.8.0",
     "react-kakao-maps-sdk": "^1.1.6",
     "react-mobile-datepicker": "^4.0.2",
+    "react-mobile-datepicker-ts": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
