--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.8",
     "redux": "^4.2.1",
     "styled-components": "^5.3.8",
     "three": "^0.150.1",
