--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	// https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter
-	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '2.1.1'
+	implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.0'
 
 	//JWT
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
@@ -52,6 +52,9 @@ dependencies {
 	//querydsl
 	implementation "com.querydsl:querydsl-jpa:${querydslVer}"
 	implementation "com.querydsl:querydsl-apt:${querydslVer}"
+
+	//s3
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 }
 
