Feat: redux-persist 추가

--- a/front-end/flory/tsconfig.json
+++ b/front-end/flory/tsconfig.json
@@ -17,5 +17,5 @@
     "jsx": "react-jsx",
     "types": ["kakao.maps.d.ts"]
   },
-  "include": ["src"]
+  "include": ["src", "./node_modules/redux-persist/types"]
 }
