--- a/front-end/flory/nginx/nginx.conf
+++ b/front-end/flory/nginx/nginx.conf
@@ -4,6 +4,6 @@ server {
     location / {
         root        /usr/share/nginx/html;
         index       index.html index.html;
-        try_files   $uri $uri/ $uri/static;
+        try_files   $uri $uri/ /index.html;
     }
 }
