--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -2,6 +2,7 @@
   "name": "flory",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
