--- a/domain/requirements.txt
+++ b/domain/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.6.0
 boto3==1.24.31
 botocore==1.27.96
 certifi==2022.12.7
@@ -6,6 +7,8 @@ charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 Cython==0.29.33
+Django==3.2.18
+django-cors-headers==3.14.0
 filelock==3.9.0
 gluonnlp==0.10.0
 graphviz==0.8.4
@@ -25,6 +28,7 @@ s3transfer==0.6.0
 sacremoses==0.0.53
 sentencepiece==0.1.96
 six==1.16.0
+sqlparse==0.4.3
 tokenizers==0.8.1rc2
 torch==1.12.0
 tqdm==4.65.0
@@ -32,4 +36,3 @@ transformers==3.1.0
 typing-extensions==4.5.0
 urllib3==1.26.14
 zipp==3.15.0
-Django==3.2.18
