UPDATE: 겹치는 설정 제거

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.datasource.data=db/h2/data.sql
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
