--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -29,6 +29,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
     "moment": "^2.29.4",
+    "p-min-delay": "^4.0.2",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
