--- a/front-end/flory/.gitignore
+++ b/front-end/flory/.gitignore
@@ -13,7 +13,11 @@
 
 # misc
 .DS_Store
-
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 npm-debug.log*
 yarn-debug.log*
