--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -29,11 +29,13 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.26",
+    "apexcharts": "^3.37.2",
     "aws-sdk": "^2.1338.0",
     "axios": "^1.3.4",
     "moment": "^2.29.4",
     "p-min-delay": "^4.0.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-hook-geolocation": "^1.1.0",
