--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -2,6 +2,7 @@
   "name": "flory",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -29,11 +30,13 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.26",
+    "apexcharts": "^3.37.2",
     "aws-sdk": "^2.1338.0",
     "axios": "^1.3.4",
     "moment": "^2.29.4",
     "p-min-delay": "^4.0.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-hook-geolocation": "^1.1.0",
@@ -80,6 +83,5 @@
   "devDependencies": {
     "@types/react-lottie": "^1.2.6",
     "@types/three": "^0.149.0"
-  },
-  "homepage": "./"
+  }
 }
