Feat: refresh token 개선

--- a/front-end/flory-app/app.json
+++ b/front-end/flory-app/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.seoda0000.bloomer"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "7f3d1488-486a-417d-aa33-5e7d544ceea9"
+      }
     }
   }
 }
