Feat: app 빌드 파일 생성

--- a/front-end/flory-app/app.json
+++ b/front-end/flory-app/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.erscindy.floryapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5f69b34e-726f-4eed-93ac-c3b7e47a38d8"
+      }
     }
   }
 }
