--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.26",
     "apexcharts": "^3.37.2",
@@ -81,7 +82,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-lottie": "^1.2.6",
     "@types/three": "^0.149.0"
+  },
+  "overrides": {
+    "react-lottie": {
+      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
+    }
   }
 }
