--- a/domain/Dockerfile
+++ b/domain/Dockerfile
@@ -4,8 +4,9 @@ WORKDIR /usr/src/app
 ## Install packages
 COPY requirements.txt ./
 RUN pip install -r requirements.txt
+RUN pip install pymysql
 RUN pip install Django==3.2.18
-
+RUN pip install scikit-learn
 # copy all file 
 COPY . .
 
@@ -14,7 +15,7 @@ COPY ./KoBERT/kobert/ /usr/local/lib/python3.7/site-packages/kobert
 COPY ./emotions/music_vector.csv /usr/src/app/emotions
 ## Run the application on the port 8000
 EXPOSE 8000
-ENV PYTHONPATH=/usr/src/app
+
 # gunicorn 배포 명령어
 # CMD ["gunicorn", "--bind", "허용하는 IP:열어줄 포트", "project.wsgi:application"]
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
