--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -31,6 +31,7 @@
     "@types/react-lottie": "^1.2.6",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.26",
+    "aos": "^2.3.4",
     "apexcharts": "^3.37.2",
     "aws-sdk": "^2.1338.0",
     "axios": "^1.3.4",
@@ -82,6 +83,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/three": "^0.149.0"
   },
   "overrides": {
