--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,30 +1,30 @@
 server.port = 8080
 
 # MySQL
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/flory?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-#spring.datasource.username=ssafy
-#spring.datasource.password=ssafy
-#spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://j8a205.p.ssafy.io:3301/bloommer?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=a205
+spring.datasource.password=1234
+spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.properties.hibernate.show_sql=false
+#spring.jpa.properties.hibernate.show_sql=false
 
 jasypt.encryptor.bean=jasyptStringEncryptor
 
 # h2
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.data=db/h2/data.sql
+#spring.jpa.defer-datasource-initialization=true
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.datasource.data=db/h2/data.sql
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
