--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-	testRuntimeOnly 'com.h2database:h2'
+	testImplementation 'com.h2database:h2'
 
 	//s3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
