--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.4.1",
     "react-window": "^1.8.8",
     "redux": "^4.2.1",
     "semantic-ui-css": "^2.5.0",
