Feat: update garden test

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://j8a205.p.ssafy.io:3301/bloommer?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=a205
 spring.datasource.password=1234
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
