--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -32,6 +32,7 @@
     "@types/react-lottie": "^1.2.6",
     "@types/react-window": "^1.8.5",
     "@types/styled-components": "^5.1.26",
+    "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "apexcharts": "^3.37.2",
     "aws-sdk": "^2.1338.0",
