Fix: 앱 이름 변경

--- a/front-end/flory-app/app.json
+++ b/front-end/flory-app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "flory-app",
+    "name": "Bloomer",
     "slug": "flory-app",
     "version": "2.0.0",
     "orientation": "portrait",
