Update: 팀 멤버 delete 요청 수정

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.username=a205
 spring.datasource.password=1234
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 jasypt.encryptor.bean=jasyptStringEncryptor
 
