--- a/front-end/flory-app/package.json
+++ b/front-end/flory-app/package.json
@@ -13,7 +13,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-webview": "11.26.0"
+    "react-native-webview": "11.26.0",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
