--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	testImplementation 'com.h2database:h2'
+	implementation 'com.zaxxer:HikariCP:4.0.3'
 
 	//s3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
