--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -55,6 +55,7 @@
     "react-swipeable": "^7.0.0",
     "react-textarea-autosize": "^8.4.1",
     "react-window": "^1.8.8",
+    "react-wordcloud": "^1.2.7",
     "redux": "^4.2.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
