--- a/front-end/flory/package.json
+++ b/front-end/flory/package.json
@@ -60,6 +60,7 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.8",
+    "sweetalert2": "^11.7.3",
     "three": "^0.150.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
