--- a/front-end/flory-app/package.json
+++ b/front-end/flory-app/package.json
@@ -16,7 +16,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-webview": "11.26.0"
+    "react-native-webview": "11.26.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
